--- a/app/src/main/res/layout/activity_category_details.xml
+++ b/app/src/main/res/layout/activity_category_details.xml
@@ -3,6 +3,7 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/tools"
     android:background="@color/background_color"
     android:orientation="vertical">
 
@@ -23,14 +24,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.RecyclerView
+            <info.awesomedevelopment.tvgrid.library.TVGridView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="3dp"
-                android:paddingTop="3dp"
-                android:scrollbars="none"
-                android:scrollingCache="true" />
+                app:tvg_animateSelectorChanges="true"
+                app:tvg_selectorPosition="over"
+                app:tvg_strokePosition="inside"
+                app:tvg_strokeColor="@android:color/white"
+                app:tvg_strokeWidth="2dp"
+                app:tvg_cornerRadius="3dp"
+                />
 
             <include
                 android:id="@+id/lyt_no_item"
