--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
 
     <dimen name="list_image_width">250dp</dimen>
     <dimen name="list_image_height">250dp</dimen>
+    <dimen name="recyclerView_item_space">8dp</dimen>
 
 </resources>
