--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/lyt_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -58,6 +58,15 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:src="@drawable/ic_play" />
+
+                    <ImageButton
+                        android:id="@+id/playbtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/playbtndesign"
+                        android:padding="@dimen/dimen_6_5dp"
+                        ads:srcCompat="@drawable/ic_play" />
 
                 </RelativeLayout>
 
